fix: change the z-index of winner.choice:after

--- a/pages/bonus/bonus.css
+++ b/pages/bonus/bonus.css
@@ -489,7 +489,7 @@
   .winner .choice::after {
      box-shadow: 0 0 0 10px #293251, 0 0 0 20px #232c4b, 0 0 0 40px #1e2949;
      animation: winner 1s forwards;
-     z-index: -5;
+     z-index: -50;
   }
   @keyframes winner {
      from {
